fix(rtk-spinner): spinner is out of place for sm size in setup screen

--- a/packages/core/src/components/rtk-setup-screen/rtk-setup-screen.css
+++ b/packages/core/src/components/rtk-setup-screen/rtk-setup-screen.css
@@ -53,7 +53,6 @@ input {
 
 rtk-spinner {
   @apply text-text-1000;
-  --icon-size: theme('spacing.8');
 }
 
 :host([size='sm']) .container,
